--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             </div>
         </div>
 
+        <!-- Кнопка развертывания для мобильных -->
+        <button class="expand-button" onclick="toggleTableExpand()">Развернуть таблицу</button>
+
         <!-- Вкладка День 1 -->
         <div id="day1" class="tab-content active">
             <table class="tournament-table">
