--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button class="tab-button active" onclick="showTab('day1')">День 1 - 25.09.2025</button>
             <button class="tab-button" onclick="showTab('day2')">День 2 - 2.10.2025</button>
             <button class="tab-button" onclick="showTab('day3')">День 3 - 9.10.2025</button>
+            <button class="tab-button" onclick="showTab('day4')">День 4 - 16.10.2025</button>
             <button class="tab-button" onclick="showTab('final')">Финал - 18.10.2025</button>
         </div>
 
@@ -33,7 +34,7 @@
                 <div class="stat-dates">
                     <div class="date-item">
                         <div class="date-label">Следующая игра</div>
-                        <div class="date-value">День 4<br>16.10.2025</div>
+                        <div class="date-value">Финал<br>18.10.2025</div>
                     </div>
                     <div class="date-item">
                         <div class="date-label">Финал</div>
@@ -125,6 +126,27 @@
             </table>
         </div>
 
+        <!-- Вкладка День 4 -->
+        <div id="day4" class="tab-content">
+            <table class="tournament-table">
+                <thead>
+                    <tr>
+                        <th>№</th>
+                        <th>Имя</th>
+                        <th>Участие</th>
+                        <th>Старт</th>
+                        <th>Добор</th>
+                        <th>Выход</th>
+                        <th>Фишки финала</th>
+                        <th>Итог</th>
+                    </tr>
+                </thead>
+                <tbody id="day4Table">
+                    <!-- Игроки дня 4 появятся здесь -->
+                </tbody>
+            </table>
+        </div>
+
         <!-- Вкладка Финал -->
         <div id="final" class="tab-content">
             <table class="tournament-table">
@@ -136,6 +158,7 @@
                         <th>День 1</th>
                         <th>День 2</th>
                         <th>День 3</th>
+                        <th>День 4</th>
                         <th>ИТОГИ</th>
                     </tr>
                 </thead>
