--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body>
     <div class="container">
         <header>
-            <h1>Турнир Дойля Брансона: Легенда 10-2!</h1>
+            <div class="header-top">
+                <button class="special-tab left" onclick="showTab('final2025')">ФИНАЛ ФИНАЛИСТОВ 2025</button>
+                <h1>Турнир Дойля Брансона: Легенда 10-2!</h1>
+                <button class="special-tab right" onclick="showTab('satellite2025')">САТЕЛЛИТ 2025</button>
+            </div>
             <div class="tournament-info">
                 <div class="tournament-phase" id="currentPhase">День 1 - 23.10.2025</div>
             </div>
         </header>
 
-        <!-- Вкладки -->
+        <!-- Основные вкладки -->
         <div class="tabs">
             <button class="tab-button active" onclick="showTab('day1')">День 1 - 23.10.2025</button>
             <button class="tab-button" onclick="showTab('day2')">День 2 - 30.10.2025</button>
@@ -157,7 +161,121 @@
                 </tbody>
             </table>
         </div>
+
+        <!-- Вкладка ФИНАЛ ФИНАЛИСТОВ 2025 -->
+        <div id="final2025" class="tab-content">
+            <div class="special-tab-content">
+                <h2>ФИНАЛ ФИНАЛИСТОВ 2025</h2>
+                <div class="special-date">20.12.2025</div>
+                <div class="players-list">
+                    <div class="player-item">1. Александр Гиг</div>
+                    <div class="player-item">2. Мария Павлова</div>
+                    <div class="player-item">3. Даша Yellow</div>
+                    <div class="player-item">4. Михаил Козадой</div>
+                    <div class="player-item">5. Вадим Константинов</div>
+                    <div class="player-item">6. Руф</div>
+                    <div class="player-item">7. Влад Пив</div>
+                    <div class="player-item">8. Артур Король</div>
+                    <div class="player-item">9. Шурик Шилкин</div>
+                    <div class="player-item">10. Даня Гол</div>
+                    <div class="player-item">11. Никита Yellow</div>
+                </div>
+            </div>
+        </div>
+
+       <!-- Вкладка САТЕЛЛИТ 2025 -->
+<div id="satellite2025" class="tab-content">
+    <div class="special-tab-content">
+        <h2>САТЕЛЛИТ 2025</h2>
+        <div class="special-date">6.12.2025</div>
+        <div class="medals-container">
+            <div class="medal-item">
+                <span class="player-name">Жан Балацкий</span>
+                <span class="medals">🥈</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Иван Чемодан</span>
+                <span class="medals">😊 М</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Иван Антипов</span>
+                <span class="medals">🥈🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Олег Сми</span>
+                <span class="medals">🥈</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Семён Ануфриев</span>
+                <span class="medals">🥈🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Egrinderolls</span>
+                <span class="medals">🥈</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Саша Тяжелов</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Асхат Суханбердин</span>
+                <span class="medals">🥉4️⃣4️⃣</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Саша Коч</span>
+                <span class="medals">🥈🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Ксюша Петрушина</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Дмитрий Ник</span>
+                <span class="medals">🥈</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Андрей Ф</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Ладали</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Даша Гри</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Искандер</span>
+                <span class="medals">🥈</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Вова Гриненко</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Даня КДД</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Надя Жб</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Константин Сидорин</span>
+                <span class="medals">🥈</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Богдан Анц</span>
+                <span class="medals">🥉</span>
+            </div>
+            <div class="medal-item">
+                <span class="player-name">Славяна</span>
+                <span class="medals">🥉</span>
+            </div>
+        </div>
     </div>
+</div>
 
     <script src="script.js"></script>
 </body>
