--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
         </div>
 
-       <!-- Вкладка САТЕЛЛИТ 2025 -->
+<!-- Вкладка САТЕЛЛИТ 2025 -->
 <div id="satellite2025" class="tab-content">
     <div class="special-tab-content">
         <h2>САТЕЛЛИТ 2025</h2>
@@ -227,7 +227,7 @@
             </div>
             <div class="medal-item">
                 <span class="player-name">Ксюша Петрушина</span>
-                <span class="medals">🥉</span>
+                <span class="medals">4️⃣</span>
             </div>
             <div class="medal-item">
                 <span class="player-name">Дмитрий Ник</span>
@@ -239,11 +239,11 @@
             </div>
             <div class="medal-item">
                 <span class="player-name">Ладали</span>
-                <span class="medals">🥉</span>
+                <span class="medals">4️⃣</span>
             </div>
             <div class="medal-item">
                 <span class="player-name">Даша Гри</span>
-                <span class="medals">🥉</span>
+                <span class="medals">4️⃣</span>
             </div>
             <div class="medal-item">
                 <span class="player-name">Искандер</span>
@@ -251,7 +251,7 @@
             </div>
             <div class="medal-item">
                 <span class="player-name">Вова Гриненко</span>
-                <span class="medals">🥉</span>
+                <span class="medals">4️⃣</span>
             </div>
             <div class="medal-item">
                 <span class="player-name">Даня КДД</span>
@@ -259,7 +259,7 @@
             </div>
             <div class="medal-item">
                 <span class="player-name">Надя Жб</span>
-                <span class="medals">🥉</span>
+                <span class="medals">4️⃣</span>
             </div>
             <div class="medal-item">
                 <span class="player-name">Константин Сидорин</span>
@@ -271,7 +271,7 @@
             </div>
             <div class="medal-item">
                 <span class="player-name">Славяна</span>
-                <span class="medals">🥉</span>
+                <span class="medals">4️⃣</span>
             </div>
         </div>
     </div>
