--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
             <div class="medal-item">
                 <span class="player-name">Семён Ануфриев</span>
-                <span class="medals">🥈🥉</span>
+                <span class="medals">🥈4️⃣</span>
             </div>
             <div class="medal-item">
                 <span class="player-name">Egrinderolls</span>
