--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
 
         <!-- Основные вкладки -->
-        <div class="tabs">
+        <div class="tabs" id="mainTabs">
             <button class="tab-button active" onclick="showTab('day1')">День 1 - 23.10.2025</button>
             <button class="tab-button" onclick="showTab('day2')">День 2 - 30.10.2025</button>
             <button class="tab-button" onclick="showTab('day3')">День 3 - 6.11.2025</button>
@@ -28,8 +28,19 @@
             <button class="tab-button" onclick="showTab('bounties')">Охота за головами</button>
         </div>
 
-        <!-- Статистика -->
-        <div class="stats">
+        <!-- Специальная вкладка для ФИНАЛ ФИНАЛИСТОВ и САТЕЛЛИТ -->
+        <div class="tabs" id="specialTabs" style="display: none;">
+            <button class="tab-button active" id="specialTabButton">ФИНАЛ ФИНАЛИСТОВ 2025</button>
+            <button class="tab-button back-button" onclick="showTab('day1')">← Назад к турниру</button>
+        </div>
+
+        <!-- Специальная вкладка для ФИНАЛ ФИНАЛИСТОВ и САТЕЛЛИТ -->
+        <div class="tabs" id="specialTabs" style="display: none;">
+            <button class="tab-button active" id="specialTabButton">ФИНАЛ ФИНАЛИСТОВ 2025</button>
+        </div>
+
+        <!-- Статистика для основных вкладок -->
+        <div class="stats" id="mainStats">
             <div class="stat-item">
                 <div class="stat-number" id="totalPlayers">0</div>
                 <div class="stat-label">Участников</div>
@@ -49,6 +60,14 @@
             <div class="stat-item">
                 <div class="stat-number" id="averageStack">0</div>
                 <div class="stat-label">Средний стек</div>
+            </div>
+        </div>
+
+        <!-- Статистика для специальных вкладок (только участники) -->
+        <div class="stats" id="specialStats" style="display: none;">
+            <div class="stat-item">
+                <div class="stat-number" id="specialTotalPlayers">0</div>
+                <div class="stat-label">Участников</div>
             </div>
         </div>
 
@@ -183,99 +202,100 @@
             </div>
         </div>
 
-<!-- Вкладка САТЕЛЛИТ 2025 -->
-<div id="satellite2025" class="tab-content">
-    <div class="special-tab-content">
-        <h2>САТЕЛЛИТ 2025</h2>
-        <div class="special-date">6.12.2025</div>
-        <div class="medals-container">
-            <div class="medal-item">
-                <span class="player-name">Жан Балацкий</span>
-                <span class="medals">🥈</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Иван Чемодан</span>
-                <span class="medals">😊 М</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Иван Антипов</span>
-                <span class="medals">🥈🥉</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Олег Сми</span>
-                <span class="medals">🥈</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Семён Ануфриев</span>
-                <span class="medals">🥈4️⃣</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Egrinderolls</span>
-                <span class="medals">🥈</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Саша Тяжелов</span>
-                <span class="medals">🥉</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Асхат Суханбердин</span>
-                <span class="medals">🥉4️⃣4️⃣</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Саша Коч</span>
-                <span class="medals">🥈🥉</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Ксюша Петрушина</span>
-                <span class="medals">4️⃣</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Дмитрий Ник</span>
-                <span class="medals">🥈</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Андрей Ф</span>
-                <span class="medals">🥉</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Ладали</span>
-                <span class="medals">4️⃣</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Даша Гри</span>
-                <span class="medals">4️⃣</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Искандер</span>
-                <span class="medals">🥈</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Вова Гриненко</span>
-                <span class="medals">4️⃣</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Даня КДД</span>
-                <span class="medals">🥉</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Надя Жб</span>
-                <span class="medals">4️⃣</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Константин Сидорин</span>
-                <span class="medals">🥈</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Богдан Анц</span>
-                <span class="medals">🥉</span>
-            </div>
-            <div class="medal-item">
-                <span class="player-name">Славяна</span>
-                <span class="medals">4️⃣</span>
+        <!-- Вкладка САТЕЛЛИТ 2025 -->
+        <div id="satellite2025" class="tab-content">
+            <div class="special-tab-content">
+                <h2>САТЕЛЛИТ 2025</h2>
+                <div class="special-date">6.12.2025</div>
+                <div class="medals-container">
+                    <div class="medal-item">
+                        <span class="player-name">Жан Балацкий</span>
+                        <span class="medals">🥈</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Иван Чемодан</span>
+                        <span class="medals">😊 М</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Иван Антипов</span>
+                        <span class="medals">🥈🥉</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Олег Сми</span>
+                        <span class="medals">🥈</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Семён Ануфриев</span>
+                        <span class="medals">🥈4️⃣</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Egrinderolls</span>
+                        <span class="medals">🥈</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Саша Тяжелов</span>
+                        <span class="medals">🥉</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Асхат Суханбердин</span>
+                        <span class="medals">🥉4️⃣4️⃣</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Саша Коч</span>
+                        <span class="medals">🥈🥉</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Ксюша Петрушина</span>
+                        <span class="medals">4️⃣</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Дмитрий Ник</span>
+                        <span class="medals">🥈</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Андрей Ф</span>
+                        <span class="medals">🥉</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Ладали</span>
+                        <span class="medals">4️⃣</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Даша Гри</span>
+                        <span class="medals">4️⃣</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Искандер</span>
+                        <span class="medals">🥈</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Вова Гриненко</span>
+                        <span class="medals">4️⃣</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Даня КДД</span>
+                        <span class="medals">🥉</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Надя Жб</span>
+                        <span class="medals">4️⃣</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Константин Сидорин</span>
+                        <span class="medals">🥈</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Богдан Анц</span>
+                        <span class="medals">🥉</span>
+                    </div>
+                    <div class="medal-item">
+                        <span class="player-name">Славяна</span>
+                        <span class="medals">4️⃣</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <script src="script.js"></script>
 </body>
