--- a/index.html
+++ b/index.html
@@ -182,17 +182,17 @@
                 <h2>ФИНАЛ ФИНАЛИСТОВ 2025</h2>
                 <div class="special-date">20.12.2025</div>
                 <div class="players-list">
-                    <div class="player-item"> Александр Гиг</div>
-                    <div class="player-item"> Мария Павлова</div>
-                    <div class="player-item"> Даша Yellow</div>
-                    <div class="player-item"> Михаил Козадой</div>
-                    <div class="player-item"> Вадим Константинов</div>
-                    <div class="player-item"> Руф</div>
-                    <div class="player-item"> Влад Пив</div>
-                    <div class="player-item"> Артур Король</div>
-                    <div class="player-item"> Шурик Шилкин</div>
-                    <div class="player-item"> Даня Гол</div>
-                    <div class="player-item"> Никита Yellow</div>
+                    <div class="player-item">1. Александр Гиг</div>
+                    <div class="player-item">2. Мария Павлова</div>
+                    <div class="player-item">3. Даша Yellow</div>
+                    <div class="player-item">4. Михаил Козадой</div>
+                    <div class="player-item">5. Вадим Константинов</div>
+                    <div class="player-item">6. Руф</div>
+                    <div class="player-item">7. Влад Пив</div>
+                    <div class="player-item">8. Артур Король</div>
+                    <div class="player-item">9. Шурик Шилкин</div>
+                    <div class="player-item">10. Даня Гол</div>
+                    <div class="player-item">11. Никита Yellow</div>
                 </div>
             </div>
         </div>
