--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <button class="tab-button" onclick="showTab('day3')">День 3 - 6.11.2025</button>
             <button class="tab-button active" onclick="showTab('final')">Финал - 8.11.2025</button>
             <button class="tab-button" onclick="showTab('bounties')">Охота за головами</button>
+            <button class="tab-button" onclick="showTab('blinds')">Блайнды</button>
         </div>
 
         <!-- Специальная вкладка для ФИНАЛ ФИНАЛИСТОВ и САТЕЛЛИТ -->
@@ -44,7 +45,7 @@
                 <div class="stat-dates">
                     <div class="date-item">
                         <div class="date-label">Следующая игра</div>
-                        <div class="date-value">День 3<br>6.11.2025</div>
+                        <div class="date-value">Финал<br>8.11.2025</div>
                     </div>
                     <div class="date-item">
                         <div class="date-label">Финал</div>
@@ -152,7 +153,11 @@
                         <th>День 1</th>
                         <th>День 2</th>
                         <th>День 3</th>
-                        <th>ИТОГИ</th>
+                        <th>Отборочные дни</th>
+                        <th>Участие в финале</th>
+                        <th>Т2</th>
+                        <th>Охота за головами</th>
+                        <th>ИТОГ</th>
                     </tr>
                 </thead>
                 <tbody id="finalTable">
@@ -172,6 +177,25 @@
                 </thead>
                 <tbody id="bountiesTable">
                     <!-- Головы появятся здесь -->
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Вкладка Блайнды -->
+        <div id="blinds" class="tab-content">
+            <table class="tournament-table">
+                <thead>
+                    <tr>
+                        <th>№</th>
+                        <th>Время начала</th>
+                        <th>Время конца</th>
+                        <th>МБ</th>
+                        <th>ББ</th>
+                        <th>Анте</th>
+                    </tr>
+                </thead>
+                <tbody id="blindsTable">
+                    <!-- Данные блайндов появятся здесь -->
                 </tbody>
             </table>
         </div>
