--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Турнир Дойля Брансона: Легенда 10-2!</title>
+    <title>Турнир Тощего Джека J-2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,31 +11,30 @@
         <header>
             <div class="header-top">
                 <button class="special-tab left" onclick="showTab('final2025')">ФИНАЛ ФИНАЛИСТОВ 2025</button>
-                <h1>Турнир Дойля Брансона: Легенда 10-2!</h1>
+                <h1>Турнир Тощего Джека J-2</h1>
                 <button class="special-tab right" onclick="showTab('satellite2025')">САТЕЛЛИТ 2025</button>
             </div>
             <div class="tournament-info">
-                <div class="tournament-phase" id="currentPhase">Результаты турнира - 13.11.2025</div>
+                <div class="tournament-phase" id="currentPhase">День 1 - 13.11.2025</div>
             </div>
         </header>
 
         <!-- Основные вкладки -->
         <div class="tabs" id="mainTabs">
-            <button class="tab-button" onclick="showTab('day1')">День 1 - 23.10.2025</button>
-            <button class="tab-button" onclick="showTab('day2')">День 2 - 30.10.2025</button>
-            <button class="tab-button" onclick="showTab('day3')">День 3 - 6.11.2025</button>
-            <button class="tab-button" onclick="showTab('final')">Финал - 8.11.2025</button>
+            <button class="tab-button active" onclick="showTab('day1')">День 1 - 13.11.2025</button>
+            <button class="tab-button" onclick="showTab('day2')">День 2 - 20.11.2025</button>
+            <button class="tab-button" onclick="showTab('day3')">День 3 - 27.11.2025</button>
+            <button class="tab-button" onclick="showTab('final')">Финал - 29.11.2025</button>
             <button class="tab-button" onclick="showTab('bounties')">Охота за головами</button>
-            <button class="tab-button active" onclick="showTab('tournamentResults')">Результаты турнира</button>
         </div>
 
         <!-- Специальная вкладка для ФИНАЛ ФИНАЛИСТОВ и САТЕЛЛИТ -->
         <div class="tabs" id="specialTabs" style="display: none;">
             <button class="tab-button active" id="specialTabButton">ФИНАЛ ФИНАЛИСТОВ 2025</button>
-            <button class="tab-button back-button" onclick="showTab('tournamentResults')">← Назад к турниру</button>
+            <button class="tab-button back-button" onclick="showTab('day1')">← Назад к турниру</button>
         </div>
 
-        <        <!-- Статистика для основных вкладок -->
+        <!-- Статистика для основных вкладок -->
         <div class="stats" id="mainStats">
             <div class="stat-item">
                 <div class="stat-number" id="totalPlayers">0</div>
@@ -45,7 +44,11 @@
                 <div class="stat-dates">
                     <div class="date-item">
                         <div class="date-label">Следующая игра</div>
-                        <div class="date-value">13.11.2025</div>
+                        <div class="date-value">20.11.2025</div>
+                    </div>
+                    <div class="date-item">
+                        <div class="date-label">Финал</div>
+                        <div class="date-value">29.11.2025</div>
                     </div>
                 </div>
             </div>
@@ -79,7 +82,7 @@
         <button class="expand-button" onclick="toggleTableExpand()">Развернуть таблицу</button>
 
         <!-- Вкладка День 1 -->
-        <div id="day1" class="tab-content">
+        <div id="day1" class="tab-content active">
             <table class="tournament-table">
                 <thead>
                     <tr>
@@ -173,22 +176,6 @@
                 </thead>
                 <tbody id="bountiesTable">
                     <!-- Головы появятся здесь -->
-                </tbody>
-            </table>
-        </div>
-
-                <!-- Вкладка Результаты турнира -->
-        <div id="tournamentResults" class="tab-content active">
-            <table class="tournament-table">
-                <thead>
-                    <tr>
-                        <th>№</th>
-                        <th>Имя</th>
-                        <th>Награды</th>
-                    </tr>
-                </thead>
-                <tbody id="tournamentResultsTable">
-                    <!-- Результаты турнира появятся здесь -->
                 </tbody>
             </table>
         </div>
